готова сетка для макета && исправил замечания линтера

--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -6,8 +6,10 @@ html(lang="ru")
             title Let’s Speak, языковая школа
             meta(content="width=device-width, initial-scale=1" name="viewport")
             meta(content="ie=edge" http-equiv="x-ua-compatible")
-            link(rel="stylesheet" href="assets/css/style.css")
+            link(rel="stylesheet" href="css/style.min.css")
             link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap" rel="stylesheet")
+            //link(href="https://assets.htmlacademy.ru/content/skills/6/case-01/outline.css" rel="stylesheet")
+
         body
             block header
                 include header
@@ -15,4 +17,4 @@ html(lang="ru")
             block footer
                 include footer
             block scripts
-                script(src="/main.js")
+                script(src="js/main.min.js")
