--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,25 +1,3 @@
-*, *::before, *::after {
-  box-sizing: inherit;
-}
+@import 'common/grid';
 
-html {
-  box-sizing: border-box;
-}
-
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 20px;
-  color: #3c425f;
-}
-
-img {
-  max-width: 100%;
-}
-
-a {
-  text-decoration: none;
-}
+@import 'common/global';
